Fix Favoritos final
